Add version number and contact info to footer

--- a/workout/templates/workout/base.html
+++ b/workout/templates/workout/base.html
@@ -49,7 +49,10 @@
 
     <footer class="bg-dark text-center text-white mt-4" id="footer">
       <div class="text-center p-3 footer-text">
-        Workout Tracker
+        Workout Tracker version 1.0.0
+      </div>
+      <div class="text-center p-3 footer-text">
+        Get Help: <a href = "mailto: abc@example.com">Email</a>
       </div>
     </footer>
     {% block js %} {% endblock js %}
