Add correct email in base.html

--- a/workout/templates/workout/base.html
+++ b/workout/templates/workout/base.html
@@ -52,7 +52,7 @@
         Workout Tracker version 1.0.1
       </div>
       <div class="text-center p-3 footer-text">
-        Get Help: <a href = "mailto: abc@example.com">Email</a>
+        Get Help: <a href = "mailto: workouttrackerhelp@gmail.com">Email</a>
       </div>
     </footer>
     {% block js %} {% endblock js %}
