Get LSRPE working with workout create page/view

--- a/workout/templates/workout/create_workout.html
+++ b/workout/templates/workout/create_workout.html
@@ -61,6 +61,14 @@
               </button>
             </div>
           </div>
+          <div class="row mt-4" id="lsrpe1">
+            <div class="col-2">
+              <label>LSRPE</label> 
+            </div>
+            <div class="col-3">
+              <input type="text" class="form-control" name="E1-lsrpe" id="e1-lsrpe"></input>
+            </div>
+          </div>
           <div class="row mt-2 justify-content-start" id="addSetButton1">
             <div class="col-2"></div>
             <div class="col-3">
