--- a/workout/templates/workout/update_workout.html
+++ b/workout/templates/workout/update_workout.html
@@ -66,6 +66,18 @@
                 </div>
               </div>
             {% endfor %}
+            <div class="row mt-4" id="lsrpe{{ exercise.exercise_number }}">
+              <div class="col-2">
+                <label>LSRPE</label> 
+              </div>
+              <div class="col-3">
+                {% if exercise.lsrpe != None %}
+                  <input type="text" class="form-control" name="E{{ exercise.exercise_number }}-lsrpe" value={{ exercise.lsrpe }} id="e{{ exercise.exercise_number }}-lsrpe"></input>
+                {% else %}
+                  <input type="text" class="form-control" name="E{{ exercise.exercise_number }}-lsrpe" value=0 id="e{{ exercise.exercise_number }}-lsrpe"></input>
+                {% endif %}
+              </div>
+            </div>
             <div class="row mt-2 justify-content-start" id="addSetButton{{ exercise.exercise_number }}">
               <div class="col-2"></div>
               <div class="col-3">
