Add help text explaining what LSRPE is

--- a/workout/templates/workout/update_workout.html
+++ b/workout/templates/workout/update_workout.html
@@ -67,6 +67,9 @@
               </div>
             {% endfor %}
             <div class="row mt-4" id="lsrpe{{ exercise.exercise_number }}">
+              <small class="help-text">Last Set Rate of Perceived Exertion (1-10)</small>
+            </div>
+            <div class="row">
               <div class="col-2">
                 <label>LSRPE</label> 
               </div>
