--- a/workout/templates/workout/create_workout.html
+++ b/workout/templates/workout/create_workout.html
@@ -62,6 +62,9 @@
             </div>
           </div>
           <div class="row mt-4" id="lsrpe1">
+            <small class="help-text">Last Set Rate of Perceived Exertion (1-10)</small>
+          </div>
+          <div class="row">
             <div class="col-2">
               <label>LSRPE</label> 
             </div>
