Add workout_clone url to templates

--- a/workout/templates/workout/overview.html
+++ b/workout/templates/workout/overview.html
@@ -17,7 +17,7 @@
         <a href="{% url 'workout_detail' workout.pk %}" class="btn btn-primary">Workout Detail</a> 
         <a href="{% url 'workout_update' workout.pk %}" class="btn btn-secondary">Update Workout</a>
         <div class="row mt-1"></div>
-        <a href="#" class="btn btn-outline-success">Clone Workout</a> 
+        <a href="{% url 'workout_clone' workout.pk %}" class="btn btn-outline-success">Clone Workout</a> 
         <a href="#" class="btn btn-outline-danger">Delete Workout</a>
       </div>
     </div>
