--- a/workout/templates/workout/overview.html
+++ b/workout/templates/workout/overview.html
@@ -18,7 +18,7 @@
         <a href="{% url 'workout_update' workout.pk %}" class="btn btn-secondary">Update Workout</a>
         <div class="row mt-1"></div>
         <a href="{% url 'workout_clone' workout.pk %}" class="btn btn-outline-success">Clone Workout</a> 
-        <a href="#" class="btn btn-outline-danger">Delete Workout</a>
+        <a href="{% url 'workout_delete' workout.pk %}" class="btn btn-outline-danger">Delete Workout</a>
       </div>
     </div>
   </div>
