--- a/workout/templates/workout/detail.html
+++ b/workout/templates/workout/detail.html
@@ -31,9 +31,9 @@
   {% endfor %}
   <div class="container">
     <a class="btn btn-outline-success" href="{% url 'workout_clone' workout.pk %}">Clone Workout</a>
-    <a class="btn btn-secondary" href="{% url 'workout_update' pk=object.pk %}">Update Workout</a>
+    <a class="btn btn-secondary" href="{% url 'workout_update' object.pk %}">Update Workout</a>
     <div class="row mt-1"></div>
-    <a class="btn btn-danger" href="{% url 'workout_delete' pk=object.pk %}">Delete Workout</a>
+    <a class="btn btn-danger" href="{% url 'workout_delete' object.pk %}">Delete Workout</a>
   </div>
 {% endblock content %}
 
