--- a/workout/templates/workout/base.html
+++ b/workout/templates/workout/base.html
@@ -17,11 +17,22 @@
           <a class="navbar-brand mr-4" href="{% url 'workout_overview' %}">Workout Tracker</a>          
           <div class="navbar-nav">
             {% if not user.is_authenticated %}
-              <a class="nav-item nav-link" href="{% url 'login' %}">Log In</a>
-              <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
+              <li class="nav-item active">
+                <a class="nav-item nav-link" href="{% url 'login' %}">Log In</a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
+              </li>
             {% else %}
-              <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
-              <a class="nav-item nav-link" href="{% url 'logout' %}">Log Out</a>
+              <li class="nav-item active">
+                <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-item nav-link" href="#">Templates</a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-item nav-link" href="{% url 'logout' %}">Log Out</a>
+              </li>
             {% endif %}
           </div>
         </div>
