Add url for workout templates view

--- a/workout/templates/workout/base.html
+++ b/workout/templates/workout/base.html
@@ -28,7 +28,7 @@
                 <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
               </li>
               <li class="nav-item active">
-                <a class="nav-item nav-link" href="#">Templates</a>
+                <a class="nav-item nav-link" href="{% url 'templates_overview' %}">Templates</a>
               </li>
               <li class="nav-item active">
                 <a class="nav-item nav-link" href="{% url 'logout' %}">Log Out</a>
