Change column size for workout name row

--- a/workout/templates/workout/create_workout.html
+++ b/workout/templates/workout/create_workout.html
@@ -8,10 +8,10 @@
       <legend class="border-bottom mb-4">New Workout</legend>
       <div class="container">
         <div class="row mt-2">
-          <div class="col-4">
+          <div class="col">
             <label>Workout Name</label>
           </div>
-          <div class="col-8">
+          <div class="col">
             <input type="text" class="form-control" name="name"></input>
           </div>
         </div>
