Make the description text area look better using bootstrap class

--- a/workout/templates/workout/create_template.html
+++ b/workout/templates/workout/create_template.html
@@ -18,7 +18,7 @@
         <label>Description</label>
       </div>
       <div class="col">
-        <textarea id="description" name="description"></textarea>
+        <textarea class="form-control" id="description" name="description"></textarea>
       </div>
     </div>
     <div class="content-section mt-4">
