Add JS function to add new workout form to template form

--- a/workout/templates/workout/create_template.html
+++ b/workout/templates/workout/create_template.html
@@ -21,8 +21,8 @@
         <textarea class="form-control" id="description" name="description"></textarea>
       </div>
     </div>
-    <div class="content-section mt-4">
-      <fieldset class="form-group">
+    <div class="content-section mt-4" id="workout1">
+      <fieldset class="form-group workout">
         <legend class="border-bottom mb-4">New Workout</legend>
         <div class="container">
           <div class="row mt-2">
@@ -111,7 +111,10 @@
       </fieldset>
     </div>
     <div class="container">
-      <div class="form-group">
+      <button type="button" class="btn btn-outline-success addWorkout">Add New Workout</button>
+    </div>
+    <div class="container">
+      <div class="form-group mt-2">
         <button class="btn btn-outline-info" type="submit" name="save" value="save">Save</button>
         <button class="btn btn-outline-info" type="submit" name="finish" value="finish">Finish</button>
       </div>
