Fix incorrect placement of workout form in template form

--- a/workout/templates/workout/create_template.html
+++ b/workout/templates/workout/create_template.html
@@ -110,8 +110,8 @@
         </div>
       </fieldset>
     </div>
-    <div class="container">
-      <button type="button" class="btn btn-outline-success addWorkout">Add New Workout</button>
+    <div class="container addWorkout">
+      <button type="button" class="btn btn-outline-success">Add New Workout</button>
     </div>
     <div class="container">
       <div class="form-group mt-2">
