Add a link to workout overview page in nav bar when in template view

--- a/workout/templates/workout/base.html
+++ b/workout/templates/workout/base.html
@@ -27,9 +27,15 @@
               <li class="nav-item active">
                 <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
               </li>
-              <li class="nav-item active">
-                <a class="nav-item nav-link" href="{% url 'templates_overview' %}">Templates</a>
-              </li>
+              {% if request.path == "/templates" %}
+                <li class="nav-item active">
+                  <a class="nav-item nav-link" href="{% url 'workout_overview' %}">Workouts</a>
+                </li>
+              {% else %}
+                <li class="nav-item active">
+                  <a class="nav-item nav-link" href="{% url 'templates_overview' %}">Templates</a>
+                </li>
+              {% endif %}
               <li class="nav-item active">
                 <a class="nav-item nav-link" href="{% url 'logout' %}">Log Out</a>
               </li>
