--- a/workout/templates/workout/base.html
+++ b/workout/templates/workout/base.html
@@ -27,7 +27,7 @@
               <li class="nav-item active">
                 <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
               </li>
-              {% if request.path == "/templates" %}
+              {% if "/templates" in request.path %}
                 <li class="nav-item active">
                   <a class="nav-item nav-link" href="{% url 'workout_overview' %}">Workouts</a>
                 </li>
