--- a/workout/templates/workout/create_template.html
+++ b/workout/templates/workout/create_template.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load crispy_forms_tags %}
 {% block content %}
-  <form method="POST" class="content-section" name="workoutCreationForm" onsubmit="return validateForm()">
+  <form method="POST" class="content-section templateForm" name="workoutCreationForm" onsubmit="return validateForm()">
     {% csrf_token %}
     <legend class="border-bottom mb-4">New Workout Template</legend>
     <div class="row mt-2">
@@ -111,7 +111,7 @@
       </fieldset>
     </div>
     <div class="container addWorkout">
-      <button type="button" class="btn btn-outline-success">Add New Workout</button>
+      <button type="button" class="btn btn-outline-success addWorkoutButton">Add New Workout</button>
     </div>
     <div class="container">
       <div class="form-group mt-2">
