--- a/workout/templates/workout/create_workout.html
+++ b/workout/templates/workout/create_workout.html
@@ -4,93 +4,95 @@
 {% block content %}
   <form method="POST" class="content-section" name="workoutCreationForm" onsubmit="return validateForm()">
     {% csrf_token %}
-    <fieldset class="form-group workout">
-      <legend class="border-bottom mb-4">New Workout</legend>
-      <div class="container">
-        <div class="row mt-2">
-          <div class="col">
-            <label>Workout Name</label>
-          </div>
-          <div class="col">
-            <input type="text" class="form-control" name="name"></input>
-          </div>
-        </div>
-      </div>
-      <div class="exercises">
-        <hr>
-        <div class="container exercise" id="exercise1">
-          <div class="row">
-            <small class="help-text">Select option 'Other' to add exercises not listed here</small>
-          </div>
-          <div class="row justify-content-between mt-4" id="select-e1-div">
+    <div id="workout1">
+      <fieldset class="form-group workout">
+        <legend class="border-bottom mb-4">New Workout</legend>
+        <div class="container">
+          <div class="row mt-2">
             <div class="col">
-              <label>Exercise</label>
+              <label>Workout Name</label>
             </div>
-            <div class="col" id="exercise_options">
-              <select name="exercise" class="select-exercise" id="select-e1">
-                <option value="----">----</option>
-                <option value="Other">Other</option>
-                {% for exercise in exercises %}
-                  <option value="{{ exercise.name }}" class="options">{{ exercise.name }}</option>
-                {% endfor %}
-              </select>
-            </div>
-          </div>
-          <div class="row mt-4">
-            <div class="col-2">
-            </div>
-            <div class="col-3">
-              <div class="d-flex justify-content-center">Weight</div>
-            </div>
-            <div class="col-3">
-              <div class="d-flex justify-content-center">Reps</div>
-            </div>
-          </div>
-          <div class="row set" id="e1-set1">
-            <div class="col-2">
-              <label>Set 1</label> 
-            </div>
-            <div class="col-3">
-              <input type="text" class="form-control" name="E1-weight" id="e1-set1-weight"></input>
-            </div>
-            <div class="col-3">
-              <input type="text" class="form-control" name="E1-reps" id="e1-set1-reps"></input>
-            </div>
-            <div class="col-2 remove-set-button">
-              <button type="button" class="btn btn-outline-danger removeSet">Remove Set
-              </button>
-            </div>
-          </div>
-          <div class="row mt-4" id="lsrpe1">
-            <small class="help-text">Last Set Rate of Perceived Exertion (1-10)</small>
-          </div>
-          <div class="row">
-            <div class="col-2">
-              <label>LSRPE</label> 
-            </div>
-            <div class="col-3">
-              <input type="text" class="form-control" name="E1-lsrpe" id="e1-lsrpe"></input>
-            </div>
-          </div>
-          <div class="row mt-2 justify-content-start" id="addSetButton1">
-            <div class="col-2"></div>
-            <div class="col-3">
-              <button type="button" class="btn btn-outline-success addSet">Add New Set</button>
-            </div>
-          </div>
-          <div class="row mt-2 justify-content-start" id="removeExercise1">
-            <div class="col-2"></div>
-            <div class="col-3">
-              <button type="button" class="btn btn-danger removeExercise">Remove Exercise</button>
+            <div class="col">
+              <input type="text" class="form-control" name="name"></input>
             </div>
           </div>
         </div>
-      </div>
-      <hr>
-      <div class="container">
-        <button type="button" class="btn btn-outline-success addExercise">Add New Exercise</button>
-      </div>
-    </fieldset>
+        <div class="exercises">
+          <hr>
+          <div class="container exercise" id="exercise1">
+            <div class="row">
+              <small class="help-text">Select option 'Other' to add exercises not listed here</small>
+            </div>
+            <div class="row justify-content-between mt-4" id="select-e1-div">
+              <div class="col">
+                <label>Exercise</label>
+              </div>
+              <div class="col" id="exercise_options">
+                <select name="exercise" class="select-exercise" id="select-e1">
+                  <option value="----">----</option>
+                  <option value="Other">Other</option>
+                  {% for exercise in exercises %}
+                    <option value="{{ exercise.name }}" class="options">{{ exercise.name }}</option>
+                  {% endfor %}
+                </select>
+              </div>
+            </div>
+            <div class="row mt-4">
+              <div class="col-2">
+              </div>
+              <div class="col-3">
+                <div class="d-flex justify-content-center">Weight</div>
+              </div>
+              <div class="col-3">
+                <div class="d-flex justify-content-center">Reps</div>
+              </div>
+            </div>
+            <div class="row set" id="e1-set1">
+              <div class="col-2">
+                <label>Set 1</label> 
+              </div>
+              <div class="col-3">
+                <input type="text" class="form-control" name="E1-weight" id="e1-set1-weight"></input>
+              </div>
+              <div class="col-3">
+                <input type="text" class="form-control" name="E1-reps" id="e1-set1-reps"></input>
+              </div>
+              <div class="col-2 remove-set-button">
+                <button type="button" class="btn btn-outline-danger removeSet">Remove Set
+                </button>
+              </div>
+            </div>
+            <div class="row mt-4" id="lsrpe1">
+              <small class="help-text">Last Set Rate of Perceived Exertion (1-10)</small>
+            </div>
+            <div class="row">
+              <div class="col-2">
+                <label>LSRPE</label> 
+              </div>
+              <div class="col-3">
+                <input type="text" class="form-control" name="E1-lsrpe" id="e1-lsrpe"></input>
+              </div>
+            </div>
+            <div class="row mt-2 justify-content-start" id="addSetButton1">
+              <div class="col-2"></div>
+              <div class="col-3">
+                <button type="button" class="btn btn-outline-success addSet">Add New Set</button>
+              </div>
+            </div>
+            <div class="row mt-2 justify-content-start" id="removeExercise1">
+              <div class="col-2"></div>
+              <div class="col-3">
+                <button type="button" class="btn btn-danger removeExercise">Remove Exercise</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <hr>
+        <div class="container">
+          <button type="button" class="btn btn-outline-success addExercise">Add New Exercise</button>
+        </div>
+      </fieldset>
+    </div>
     <div class="container">
       <div class="form-group">
         <button class="btn btn-outline-info" type="submit" name="save" value="save">Save</button>
